1.7.10/Creative Thinking/.gradle/gradle.log
****************************
 Powered By MCP:             
 http://mcp.ocean-labs.de/   
 Searge, ProfMobius, Fesh0r, 
 R4wk, ZeuX, IngisKahn, bspkrs
 MCP Data version : unknown
****************************
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavawarning: [options] bootstrap class path not set in conjunction with -source 1.6
C:\Users\Tod Woods\Desktop\CreativeThinkingModPack\1.7.10\Creative Thinking\build\sources\java\com\ct\creativethinking\biome\BiomeFeatures\WorldGenOreoTree.java:1: error: ';' expected
package com.ct.creativethinking.biome.BiomeFeatures
                                                   ^
1 error
1 warning
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 1 mins 2.817 secs
